--- a/simlane/templates/sim/events/dropdown_results_partial.html
+++ b/simlane/templates/sim/events/dropdown_results_partial.html
@@ -69,7 +69,7 @@
     }
 
     // Update the search input display
-    const searchInput = document.querySelector('input[name="event_search"]');
+    const searchInput = document.querySelector('input[name="q"]');
     if (searchInput) {
       searchInput.value = '';
     }
