wip: events page

--- a/simlane/templates/base.html
+++ b/simlane/templates/base.html
@@ -157,5 +157,6 @@
     </script>
       {% endcomment %}
     {% endblock inline_javascript %}
+    {% block page_javascript %}{% endblock %}
   </body>
 </html>
